Add get all balances system
